home-k8s/apps/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: n8n
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: n8n
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      containers:
        - name: container
          image: docker.n8n.io/n8nio/n8n:2.0.3
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 5678
              name: http
              protocol: TCP
      nodeSelector:
        kubernetes.io/hostname: home-k8s01.sigurs.io
