home-k8s/apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  selector:
    app.kubernetes.io/name: n8n
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
