home-k8s/apps/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
spec:
  rules:
    - host: n8n.home-k8s.sigurs.io
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: n8n
              port:
                name: http
